	 machines/,z80/coretest.c: new page mapping control scheme where
	 each machine has a function which can be called to set the
	 current page mapping (part of patch #937338) (Fred).
20040513 Makefile.am,dck.c,if2.[ch],machine.[ch],menu.[ch],menu_data.c,
	 periph.[ch],settings.dat,machines/,ui/{options.dat,ui.h},
	 ui/gtk/gtkui.c: add Interface II support (rest of patch #937338)
	 (Fred).
20040513 machines/machines.h: use correct #include guard name (part of
	 patch #929112) (Fred).
20040513 machine.c,memory.[ch],menu.c,menu_data.c,settings-header.pl,
	 settings.pl,spectrum.[ch],tape.c,machines/{Makefile.am,
	 machines.h,spec_se.c,tc2068.c}: Spectrum SE support (hacked
	 version of the rest of patch #929112) (Fred/Phil).
20040513 roms/{Makefile.am,plus3e-[0123].rom}: add +3e ROMs.
20040514 spectrum.[ch]: Correct RAM array size comments.
20040514 dck.c: Move i and mem variables to loop that uses them.
20040514 roms/{Makefile.am,se-[01].rom}: add SE ROMs.
20040514 if2.c,machine.[ch],memory.[ch],debugger/breakpoint.[ch],
	 machines/,ui/gtk/debugger.c: allow breakpoints to be set for
	 non-RAM pages.
20040514 memory.[ch],debugger/breakpoint.[ch]: allow breakpoints to be set
	 on the ROMCS pages.
20040516 spectrum.c: use Ramsoft's screen/attributes pattern for the
	 floating bus, but stick to the 14335/14361 timings. Arkanoid and
	 Sidewize now work.
20040517 memory.[ch],scld.c,tape.c,trdos.c,utils.c,debuggger/breakpoint.c,
	 machines/{scorpion.c,spec128.c,spec16.c,spec48.c,spec_se.c,
	 specplus3.c},ui/gtk/debugger.c,z80/{coretest.c,z80.pl,z80_macros.h,
	 z80_ops.c}: refactor to introduce separate mappings for reading
	 and writing.
20040517 Makefile.am,fuse.c,machine.c,memory.c,menu.[ch],menu_data.c,
	 periph.c,settings.dat,zxatasp.[ch],zxcf.[ch],ui/options.dat:
	 first commit of ZXATASP/ZXCF code. Not working yet.
20040518 configure.in,acconfig,h: Remove need for acconfig.h for newer
         autotools per patch #953734.