@@ -36,5 +36,6 @@ libspectrum_byte spec48_contend_delay( libspectrum_dword time );
 
 int spec48_init( fuse_machine_info *machine );
 int spec48_common_reset( void );
+int spec48_memory_map( void );
 
 #endif			/* #ifndef FUSE_SPEC48_H */
